<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_customer_source_of_lead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_view_source" />

        <EditText
            android:id="@+id/et_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_view_phone" />

        <EditText
            android:id="@+id/et_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_fullname" />

        <EditText
            android:id="@+id/et_customer_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_view_company" />

        <EditText
            android:id="@+id/et_customer_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_view_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_customer_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_view_designation" />

        <EditText
            android:id="@+id/et_customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_view_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <WebView
                android:id="@+id/wv_location"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
