<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:contentDescription="@string/app_loading"
        android:src="@drawable/ic_clear_black_24px"
        android:layout_gravity="end"/>

    <smarter.uearn.money.views.RegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/audio_recorder" />

    <TextView
        android:id="@+id/tv_start_stop_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawablePadding="2dp"
        android:drawableTop="@mipmap/ic_start_recording"
        android:gravity="center_horizontal"
        android:text="@string/media_start_recording" />

    <LinearLayout
        android:id="@+id/llMediaControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_media_play"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="2dp"
                android:drawableTop="@mipmap/ic_start_recording"
                android:gravity="center_horizontal"
                android:text="@string/media_play_audio" />

            <TextView
                android:id="@+id/tv_media_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="2dp"
                android:drawableTop="@mipmap/ic_media_stop"
                android:gravity="center_horizontal"
                android:text="@string/media_stop_audio" />
        </LinearLayout>

        <smarter.uearn.money.views.GeneralButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>