<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dailog_bottom_elements"
        android:paddingLeft="@dimen/long_margin_between_elements"
        android:paddingRight="@dimen/long_margin_between_elements"
        android:paddingTop="@dimen/long_margin_between_elements"
        android:text="@string/dialog_change_password"
        android:textSize="20sp"
        android:textColor="@color/smb_grey_54" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/long_margin_between_elements"
            android:layout_marginRight="@dimen/long_margin_between_elements"
            android:layout_marginBottom="@dimen/dailog_bottom_elements"
            android:drawableEnd="@drawable/edit_show_password"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/edit_show_password"
            android:hint="@string/dialog_edittext_hint_old_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:drawableTint="@color/app_color"
            app:errorTextAppearance="@style/error_appearance"
            android:padding="@dimen/edittext_padding"
            android:textColorHint="@color/smb_grey_54"
            android:translationY="3dp"
            tools:ignore="MissingPrefix" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/long_margin_between_elements"
            android:layout_marginRight="@dimen/long_margin_between_elements"
            android:layout_marginBottom="@dimen/dailog_bottom_elements"
            android:drawableEnd="@drawable/edit_show_password"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/edit_show_password"
            android:hint="@string/dialog_edittext_hint_new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/edittext_padding"
            android:drawableTint="@color/app_color"
            app:errorTextAppearance="@style/error_appearance"
            android:textColorHint="@color/smb_grey_54"
            android:translationY="3dp"
            tools:ignore="MissingPrefix" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/reTypePasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/long_margin_between_elements"
            android:layout_marginRight="@dimen/long_margin_between_elements"
            android:layout_marginBottom="@dimen/dailog_bottom_elements"
            android:drawableEnd="@drawable/edit_show_password"
            android:drawableTint="@color/app_color"
            app:errorTextAppearance="@style/error_appearance"
            android:drawablePadding="8dp"
            android:drawableRight="@drawable/edit_show_password"
            android:hint="@string/dialog_edittext_hint_retype_new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="@dimen/edittext_padding"
            android:textColorHint="@color/smb_grey_54"
            android:translationY="3dp"
            tools:ignore="MissingPrefix" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="@dimen/dialog_padding_horizontal"
        android:layout_marginLeft="@dimen/dialog_padding_horizontal"
        android:layout_marginRight="@dimen/dialog_padding_horizontal"
        android:layout_marginTop="@dimen/dialog_padding_horizontal"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            ></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            ></LinearLayout>

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="@dimen/two_level_button_space"
            android:layout_marginRight="@dimen/two_level_button_space"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/text_cancel"
            android:textColor="@color/smb_darkblue" />

        <TextView
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/text_update"
            android:textColor="@color/smb_darkblue" />
    </LinearLayout>
</LinearLayout>